--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,6 @@
   "version": "1.0",
   "description": "Anti-scatter focus app",
   "action": {
-    "default_popup": "popup.html",
-    "default_icon": {
-      "16": "/images/icon16.png",
-      "32": "/images/icon32.png",
-      "48": "/images/icon48.png",
-      "128": "/images/icon128.png"
-    }
+    "default_popup": "popup.html"
   }
 }
