--- a/manifest.json
+++ b/manifest.json
@@ -5,5 +5,6 @@
   "description": "Anti-scatter focus app",
   "action": {
     "default_popup": "popup.html"
-  }
+  },
+  "permissions": ["tabs", "activeTab"]
 }
