--- a/client/anti-scatter/public/manifest.json
+++ b/client/anti-scatter/public/manifest.json
@@ -6,7 +6,7 @@
   "permissions": [],
 
   "action": {
-    "default_popup": "./index.html",
+    "default_popup": "index.html",
     "default_title": "Open the popup!"
   },
   "background": {
