--- a/client/anti-scatter/public/manifest.json
+++ b/client/anti-scatter/public/manifest.json
@@ -3,14 +3,18 @@
   "name": "Anti-Scatter",
   "version": "1.0",
   "description": "Description of your extension",
-  "permissions": [],
+  "permissions": [
+    "activeTab",
+    "tabs",
+    "storage"
+  ],
 
   "action": {
-    "default_popup": "index.html",
+    "default_popup": "popup/popup.html",
     "default_title": "Open the popup!"
   },
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background/background.js"
   },
   "content_scripts": []
 }
