--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.7",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +40,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.32",
+    "@types/react-dom": "^18.2.14",
+    "typescript": "^5.2.2"
   }
 }
