--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -6,15 +6,23 @@
   "permissions": [
     "activeTab",
     "tabs",
-    "storage"
+    "storage",
+    "webNavigation",
+    "webRequest",
+    "webRequestBlocking",
+    "<all_urls>"
   ],
-
   "action": {
-    "default_popup": "popup/popup.html",
+    "default_popup": "popup/loggedOut/loggedOut.html",
     "default_title": "Open the popup!"
   },
   "background": {
     "service_worker": "background/background.js"
   },
-  "content_scripts": []
+  "content_scripts": [
+    {
+      "matches" : ["<all_urls>"],
+      "js": ["content/content.js"]
+    }
+  ]
 }
