--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -9,7 +9,7 @@
     "storage",
     "webNavigation",
     "webRequest",
-    "webRequestBlocking",
+    "declarativeNetRequest",
     "<all_urls>"
   ],
   "action": {
@@ -17,8 +17,8 @@
     "default_title": "Open the popup!"
   },
   "background": {
-    "service_worker": "background/background.js"
-  },
+      "service_worker": "background/background.js"
+    },
   "content_scripts": [
     {
       "matches" : ["<all_urls>"],
