--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://ralfbrse.github.io/Anti-Scatter/",
   "name": "anti-scatter",
   "version": "0.1.0",
   "private": true,
@@ -15,13 +14,12 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "build": "set INLINE_RUNTIME_CHUNK=false && react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -42,8 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^6.0.0"
   }
 }
