--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "build": "cd client && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
+  "engines": {
+    "node": "v18.16.1"
+  },
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
