--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "dependencies": {
     "react-icons": "^4.11.0"
+  },
+  "scripts": {
+    "start": "cd server && npm run start"
+  },
+  "engines": {
+    "node": "v18.16.0"
   }
 }
