--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "react-icons": "^4.11.0"
   },
   "scripts": {
-    "start": "cd server && npm run start"
+    "start": "cd server && npm start"
   },
   "engines": {
     "node": "v18.16.0"
