--- a/client-extension/package.json
+++ b/client-extension/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tremor/react": "^3.11.0",
+    "antd": "^5.11.1",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
