--- a/client-extension/public/manifest.json
+++ b/client-extension/public/manifest.json
@@ -6,9 +6,9 @@
   "permissions": [
     "activeTab",
     "tabs",
-    "storage"
+    "storage",
+    "scripting"
   ],
-
   "action": {
     "default_popup": "popup/popup.html",
     "default_title": "Open the popup!"
@@ -16,5 +16,10 @@
   "background": {
     "service_worker": "background/background.js"
   },
-  "content_scripts": []
+  "content_scripts": [
+    {
+      "matches": ["https://*/*", "http://*/*"],
+      "js": ["content/content.js"]
+    }
+  ]
 }
