--- a/client-website/package.json
+++ b/client-website/package.json
@@ -12,6 +12,7 @@
     "@tremor/react": "^3.11.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "gapi-script": "^1.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-cookie": "^6.1.1",
