--- a/client-website/package.json
+++ b/client-website/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "start-client": "react-scripts start",
-    "build": "react-scripts build && (cd ../server && npm install)",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
