--- a/client-website/package.json
+++ b/client-website/package.json
@@ -23,6 +23,7 @@
     "recharts": "^2.9.3",
     "web-vitals": "^2.1.4"
   },
+  "build": "react-scripts build",
   "scripts": {
     "start-client": "react-scripts start",
     "build": "react-scripts build",
