react-calendar dependency
Regular Calendar works at this point

--- a/client-website/package.json
+++ b/client-website/package.json
@@ -15,6 +15,7 @@
     "gapi-script": "^1.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-calendar": "^4.6.1",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
