--- a/client-extension/public/manifest.json
+++ b/client-extension/public/manifest.json
@@ -11,15 +11,16 @@
     "webRequest",
     "declarativeNetRequest",
     "<all_urls>",
-    "scripting"
+    "scripting",
+    "browserAction"
   ],
   "action": {
-    "default_popup": "popup/loggedOut/loggedOut.html",
+    "popup": "popup/loggedOut/loggedOut.html",
     "default_title": "Open the popup!"
   },
   "background": {
-      "service_worker": "background/background.js"
-    },
+    "service_worker": "background/background.js"
+  },
   "content_scripts": [
     {
       "matches": ["https://*/*", "http://*/*"],
